k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multiserve
  labels:
    name: multiserve
    environment: production
    istio-injection: enabled
